# FlowType

./: .gitignore  CONTRIBUTING.md  GEMINI.md  IMPLEMENTATION_NOTES.md  README.md  code_review_report.md  flowtype-mac.spec  flowtype.spec  implementation_plan.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  macos-build.yml  windows-release.yml
docs/: HANDOFF_PROMPT_UI_SHELL.md  IMPROVEMENT_ROADMAP.md  NEXT_PHASE_PRODUCT_DIRECTION.md  PACKAGED_SMOKE_CHECKLIST.md  QA_RELEASE_AUDIT_v0.1.13.md  UI_IMPLEMENTATION_BACKLOG.md
packaging/: entitlements-mac.plist
scripts/: build.py  generate_branding_assets.py  installer.iss  validate_dist.py
src/flowtype/: __init__.py  __main__.py  audio.py  branding.py  catalog.py  cleanup.py  config.py  history.py  keystore.py  logger.py  main.py  output.py  pipeline.py  settings.py  shortcuts.py  startup.py  transcriber.py  tray.py  usage.py  windows.py
src/flowtype/platform/: __init__.py  _common.py  base.py  darwin.py  windows.py
src/flowtype/ui/: app.py  controller.py  single_instance.py  system_tray.py
src/flowtype/ui/qml/: ChoiceCard.qml  ConfigurationView.qml  EmptyState.qml  FlowButton.qml  FlowModelCombo.qml  FlowSwitch.qml  FormRow.qml  GeneralSettingsView.qml  HUDWindow.qml  HistoryView.qml  HomeView.qml  InfoRow.qml  (+20 more)
tests/: test_audio.py  test_cleanup.py  test_config.py  test_keystore.py  test_modes.py  test_output.py  test_pipeline.py  test_pipeline_runtime.py  test_settings.py  test_shortcuts.py  test_startup.py  test_transcriber.py  test_ui_controller.py  test_ui_qml_smoke.py  test_windows.py
